# Event_Driven_Files_System

./: Dockerfile.api  Dockerfile.worker  README.md  docker-compose.yml  pyproject.toml
api/: main.py
consumers/: metadata_indexer.py  notifier.py  scanner.py  validator.py
producers/: file_event_producer.py
shared/: common.py  config.py  schemas.py
