[tool.poetry]
name = "event-driven-advanced"
version = "0.1.0"
description = "An advanced event-driven system using FastAPI, RabbitMQ, and Docker"
authors = ["Syed Muhammad Hussain"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.10"
fastapi = "^0.111.0"
uvicorn = "^0.29.0"
aio_pika = "^9.4.0"
pydantic = "^2.6.0"
python-multipart = "^0.0.9"
python-dotenv = "^1.0.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
